Make OIDC links provider-derived
